Added poster & links to build and github

--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
     <div class="description">
         <h2 class="leftalign">What is Shuriken Dash about?</h2>
         <p>
-            In Shuriken Dash, players take control of Kyo, as they use their magical shuriken to elimate a group of raiders trying to steal it.
+            In Shuriken Dash, players take control of Kyo, as they use their special shuriken to elimate a group of raiders trying to steal it.
             When the player kills an enemy with the shuriken, they teleport to them and throw the shuriken again, killing every enemy in the level.
             Watch out though! If the player misses, the shuriken will break and the player has to restart the level.
             Memorise the enemy's locations, and figure out a path that hits each raider in the quickest time possible!
         </p>
+        <h2 class="leftalign">How to download</h2>
+        <ol>
+            <li>Go to <a href="https://drive.google.com/file/d/1UVg-CW4B-afl5yvT6RLJoOO2fDN4gRTG/view?usp=sharing" target="_blank">this link</a></li>
+            <li>Click "Download"</li>
+            <li>Unzip the file that downloads</li>
+            <li>Navigate into the Builds folder</li>
+            <li>Run FYP.exe</li>
+        </ol>
     </div>
     <div>
         <figure>
@@ -31,6 +39,24 @@
             <img src="images/gameplay.png" alt="Example of gameplay">
             <figcaption>Example of gameplay</figcaption>
         </figure>
+        <figure class="poster">
+            <img src="images/poster.png" alt="Project poster">
+            <figcaption>Shuriken Dash Poster</figcaption>
+        </figure>
+    </div>
+    <div class="aboutme">
+        <div class="text">
+            <h2 class="leftalign">About Me</h2>
+            <p>
+                I am a final year student, studying Computer Science in SETU, and specialising in Game Development.
+                Shuriken Dash was designed and programmed for my Final Year Project in my degree.
+            </p>
+            <p>
+                A link to my GitHub can be found <a href="https://github.com/baz333" target="_blank">here</a></p>
+        </div>
+        <div class="photo">
+            <img src="images/linkedin-pfp.png" alt="Photo of me">
+        </div>
     </div>
 </body>
 </html>
